--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -77,7 +77,7 @@
                 </div>
                 <div class="col-lg-8 align-self-baseline">
                     <p class="text-white-75 font-weight-bold mb-5">July 18–22, 2022, Indian Institute of Science,
-                        Bengaluru, India</p>
+                        Bangalore, India</p>
                     <a class="btn btn-primary btn-xl js-scroll-trigger" href="assets/img/FPSAC-2022-Poster.pdf">Download Poster</a>
                 </div>
                 </div>
@@ -231,7 +231,7 @@
                     <h2 style="text-align: center;">Organizing Committee</h2>
                     <hr class="divider my-4" />
                 <div class="col-sm">
-                    <p style="text-align: center;"><a href="http://www.math.iisc.ernet.in/~arvind/">Arvind Ayyer</a><br><strong>Chair</strong></br>Indian Institute of Science, Bengaluru</p>
+                    <p style="text-align: center;"><a href="http://www.math.iisc.ernet.in/~arvind/">Arvind Ayyer</a><br><strong>Chair</strong></br>Indian Institute of Science, Bangalore</p>
                     <p style="text-align: center;"><a href="https://www.gbhatnagar.com/">Gaurav Bhatnagar</a></br>Jawaharlal Nehru University, Delhi</p>
                     <p style="text-align: center;"><a href="http://people.iitgn.ac.in/~adixit/">Atul Dixit</a></br>Indian Institute of Technology, Gandhinagar</p>
                     <p style="text-align: center;"><a href="https://www.renyi.hu/~ohkatona/">Gyula O. H. Katona</a></br>Hungarian Academy of Sciences</p>
