Updated Cynthia, Vasu, Jang Soo and Jiang

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -162,9 +162,9 @@
         <div class="container">
             <div class="row">
                 <div class="col-sm">
-                    <h3 style="text-align: center;" class="h4 mb-2"><a href="https://clvinzan.math.ncsu.edu/">Cynthia
+                    <h3 style="text-align: center;" class="h4 mb-2"><a href="http://sites.math.washington.edu/~vinzant/">Cynthia
                             Vinzant</a></h3>
-                    <p style="text-align: center;">North Carolina State University</p>
+                    <p style="text-align: center;">University of Washington</p>
                     <!--<p style="text-align: center;">TBA</p> -->
                 </div>
             </div>
@@ -193,7 +193,8 @@
                             <p style="text-align: center;"><a href="https://people.kth.se/~linusson/">Svante Linusson</a><br><strong>Co-chair</strong> </br>KTH Royal Institute of Technology, Stockholm</p>
                             <p style="text-align: center;"><a href="https://www.labri.fr/perso/aval/">Jean-Christophe Aval</a></br>CNRS, Université de Bordeaux</p>
                             <p style="text-align: center;"><a href="http://faculty.wwu.edu/~bergeta/">Andrew Berget</a> </br>Western Washington University</p>
-                            <p style="text-align: center;"><a href="https://www.ipht.fr/en/Pisp/jeremie.bouttier/index_en.php">Jeremie Bouttier</a></br>CEA Saclay and ENS de Lyon</p>
+                            <p style="text-align: center;"><a href="https://www.ipht.fr/en/Pisp/jeremie.bouttier/index_en.php">Jeremie Bouttier</a></br>CEA Saclay and ENS de 
+</p>
                             <p style="text-align: center;"><a href="https://www.mat.univie.ac.at/~cesar/">Cesar Ceballos</a> </br>TU Graz</p>
                             <p style="text-align: center;"><a href="https://www.irif.fr/~chapuy/">Guillaume Chapuy</a></br>Université de Paris</p>
                             <p style="text-align: center;"><a href="https://www.maths.dur.ac.uk/users/sunil.chhita/">Sunil Chhita</a> </br>Durham University</p>
@@ -208,7 +209,7 @@
                         <div class="col-lg-6">       
                             <p style="text-align: center;"><a href="http://www.unk.edu/academics/math/faculty-staff/dr-jia-huang.php">Jia Huang</a></br>Sungkyunkwan University</p>
                             <p style="text-align: center;"><a href="https://www.irif.fr/~josuat/">Matthieu Josuat-Vergès</a></br>Université de Paris</p>     
-                            <p style="text-align: center;"><a href="https://sites.google.com/site/mathjskim/">Jang Soo Kim</a></br>Universidad Sergio Arboleda</p>   
+                            <p style="text-align: center;"><a href="https://sites.google.com/site/mathjskim/">Jang Soo Kim</a></br>Sungkyunkwan University</p>   
                             <p style="text-align: center;"><a href="http://fac-staff.seattleu.edu/klees/web/">Steven Klee</a></br>Seattle University</p>
                             <p style="text-align: center;"><a href="http://www.koutschan.de/">Christoph Koutschan</a></br>RICAM, Austria</p>
                             <p style="text-align: center;"><a href="https://homepages.warwick.ac.uk/staff/D.Maclagan/">Diane Maclagan</a></br>University of Warwick</p>
@@ -220,8 +221,8 @@
                             <p style="text-align: center;"><a href="https://www.imsc.res.in/~amri/">Amritanshu Prasad</a></br>The Institute of Mathematical Sciences, Chennai</p>
                             <p style="text-align: center;"><a href="https://www.mat.univie.ac.at/~schlosse/">Michael Schlosser</a></br>University of Vienna</p>
                             <p style="text-align: center;"><a href="http://arminstraub.com/">Armin Straub</a></br>Hebrew University</p>
-                            <p style="text-align: center;"><a href="https://www.math.upenn.edu/~vvtewari/">Vasu Tewari</a></br>University of Pennsylvania</p>
-                            <p style="text-align: center;"><a href="https://www.math.upenn.edu/~vvtewari/">Jiang Zeng</a></br>University of Pennsylvania</p>
+                            <p style="text-align: center;"><a href="https://math.hawaii.edu/~vvtewari/">Vasu Tewari</a></br>University of Hawaii</p>
+                            <p style="text-align: center;"><a href="http://math.univ-lyon1.fr/%7ezeng/">Jiang Zeng</a></br>Université Lyon 1</p>
                         </div>
                     </div>
 
