--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -89,7 +89,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <h2 class="text-white mt-0">Speakers</h2>
+                    <h2 class="text-white mt-0">Invited Speakers</h2>
                     <hr class="divider light my-4" />
                 </div>
             </div>
@@ -173,6 +173,14 @@
         </div>
         </div>
         </div>
+        <div class="container">
+            <div class="row justify-content-center">
+                <div class="col-lg-8 text-center">
+                    <p class="text-white-50 mb-4">Go to the <a class="nav-link js-scroll-trigger" href="#submission">Submission</a> section for contributed talks.</p>
+                </div>
+            </div>
+        </div>
+
     </section>
 
 
