Changed alignment in Speaker section

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -176,7 +176,7 @@
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
-                    <p class="text-white-50 mb-4">Go to the <a class="nav-link js-scroll-trigger" href="#submission">Submission</a> section for contributed talks.</p>
+                    <p style="text-align: center;>Go to the <a class="nav-link js-scroll-trigger" href="#submission">Submission</a> section for contributed talks.</p>
                 </div>
             </div>
         </div>
