Fixed Jeremie and Jia's affiliations

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -201,8 +201,7 @@
                             <p style="text-align: center;"><a href="https://people.kth.se/~linusson/">Svante Linusson</a><br><strong>Co-chair</strong> </br>KTH Royal Institute of Technology, Stockholm</p>
                             <p style="text-align: center;"><a href="https://www.labri.fr/perso/aval/">Jean-Christophe Aval</a></br>CNRS, Université de Bordeaux</p>
                             <p style="text-align: center;"><a href="http://faculty.wwu.edu/~bergeta/">Andrew Berget</a> </br>Western Washington University</p>
-                            <p style="text-align: center;"><a href="https://www.ipht.fr/en/Pisp/jeremie.bouttier/index_en.php">Jeremie Bouttier</a></br>CEA Saclay and ENS de 
-</p>
+                            <p style="text-align: center;"><a href="https://www.ipht.fr/en/Pisp/jeremie.bouttier/index_en.php">Jérémie Bouttier</a></br>CEA, Université Paris-Saclay</p>
                             <p style="text-align: center;"><a href="https://www.mat.univie.ac.at/~cesar/">Cesar Ceballos</a> </br>TU Graz</p>
                             <p style="text-align: center;"><a href="https://www.irif.fr/~chapuy/">Guillaume Chapuy</a></br>Université de Paris</p>
                             <p style="text-align: center;"><a href="https://www.maths.dur.ac.uk/users/sunil.chhita/">Sunil Chhita</a> </br>Durham University</p>
@@ -215,7 +214,7 @@
                             <p style="text-align: center;"><a href="http://www.lix.polytechnique.fr/Labo/Eric.Fusy/">Éric Fusy</a> </br>Ecole Polytechnique</p>
                         </div>
                         <div class="col-lg-6">       
-                            <p style="text-align: center;"><a href="http://www.unk.edu/academics/math/faculty-staff/dr-jia-huang.php">Jia Huang</a></br>Sungkyunkwan University</p>
+                            <p style="text-align: center;"><a href="http://www.unk.edu/academics/math/faculty-staff/dr-jia-huang.php">Jia Huang</a></br>University of Nebraska at Kearney</p>
                             <p style="text-align: center;"><a href="https://www.irif.fr/~josuat/">Matthieu Josuat-Vergès</a></br>Université de Paris</p>     
                             <p style="text-align: center;"><a href="https://sites.google.com/site/mathjskim/">Jang Soo Kim</a></br>Sungkyunkwan University</p>   
                             <p style="text-align: center;"><a href="http://fac-staff.seattleu.edu/klees/web/">Steven Klee</a></br>Seattle University</p>
