Updated visa section

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -173,6 +173,7 @@
         </div>
         </div>
         </div>
+        <hr class="divider my-4" />
         <div class="container">
             <div class="row justify-content-center">
                 <div class="col-lg-8 text-center">
@@ -426,6 +427,7 @@
 			 		 <p class="text mb-4"><a class="nav-item" href="https://indianvisaonline.gov.in/visa/" target="_blank"><strong>See here for more details.</strong></a></p>
 			 		 <p class="text mb-6"> Nationals of certain countries may be eligible for e-tourist visa.</p>
                 <p class="text mb-4"><a class="nav-item" href="https://indianvisaonline.gov.in/visa/tvoa.html" target="_blank"><strong>Check this website for more details</strong></a></p>
+		<p class="text mb-6"> Contact fpsac2022.math at iisc dot ac dot in if you have questions about the visa process.</p>    
             </div>
         </div>
     </div>
