Updated French PC affiliations

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -204,29 +204,29 @@
                             <p style="text-align: center;"><a href="http://faculty.wwu.edu/~bergeta/">Andrew Berget</a> </br>Western Washington University</p>
                             <p style="text-align: center;"><a href="https://www.ipht.fr/en/Pisp/jeremie.bouttier/index_en.php">Jérémie Bouttier</a></br>CEA, Université Paris-Saclay</p>
                             <p style="text-align: center;"><a href="https://www.mat.univie.ac.at/~cesar/">Cesar Ceballos</a> </br>TU Graz</p>
-                            <p style="text-align: center;"><a href="https://www.irif.fr/~chapuy/">Guillaume Chapuy</a></br>Université de Paris</p>
+                            <p style="text-align: center;"><a href="https://www.irif.fr/~chapuy/">Guillaume Chapuy</a></br>CNRS, Université de Paris</p>
                             <p style="text-align: center;"><a href="https://www.maths.dur.ac.uk/users/sunil.chhita/">Sunil Chhita</a> </br>Durham University</p>
-                            <p style="text-align: center;"><a href="https://math.berkeley.edu/~corteel/">Sylvie Corteel</a></br>University of California Berkeley</p>
+                            <p style="text-align: center;"><a href="https://math.berkeley.edu/~corteel/">Sylvie Corteel</a></br>University of California Berkeley and CNRS, Université de Paris</p>
                             <p style="text-align: center;"><a href="http://dleon.combinatoria.co/">Rafael S. González D'León</a> </br>Universidad Sergio Arboleda</p>
                             <p style="text-align: center;"><a href="http://math.iisc.ac.in/~dattab/">Basudeb Datta</a></br>Indian Institute of Science, Bangalore</p>
                             <p style="text-align: center;"><a href="https://faculty.math.illinois.edu/~philippe/">Philippe di Francesco</a> </br>University of Illinois at Urbana-Champaign</p>
-                            <p style="text-align: center;"><a href="http://math.univ-lyon1.fr/~dousse/">Jehanne Dousse</a></br>Université Lyon 1</p>
+                            <p style="text-align: center;"><a href="http://math.univ-lyon1.fr/~dousse/">Jehanne Dousse</a></br>CNRS, Université Lyon 1</p>
                             <p style="text-align: center;"><a href="https://maths.ucd.ie/~dukes/">Mark Dukes</a> </br>University College Dublin</p>
-                            <p style="text-align: center;"><a href="http://www.lix.polytechnique.fr/Labo/Eric.Fusy/">Éric Fusy</a> </br>Ecole Polytechnique</p>
+                            <p style="text-align: center;"><a href="http://igm.univ-mlv.fr/~fusy/">Éric Fusy</a> </br>CNRS, Université Gustave Eiffel</p>
                         </div>
                         <div class="col-lg-6">       
                             <p style="text-align: center;"><a href="http://www.unk.edu/academics/math/faculty-staff/dr-jia-huang.php">Jia Huang</a></br>University of Nebraska at Kearney</p>
-                            <p style="text-align: center;"><a href="https://www.irif.fr/~josuat/">Matthieu Josuat-Vergès</a></br>Université de Paris</p>     
+                            <p style="text-align: center;"><a href="https://www.irif.fr/~josuat/">Matthieu Josuat-Vergès</a></br>CNRS, Université de Paris</p>     
                             <p style="text-align: center;"><a href="https://sites.google.com/site/mathjskim/">Jang Soo Kim</a></br>Sungkyunkwan University</p>   
                             <!--<p style="text-align: center;"><a href="http://fac-staff.seattleu.edu/klees/web/">Steven Klee</a></br>Seattle University</p>-->
                             <p style="text-align: center;"><a href="http://www.koutschan.de/">Christoph Koutschan</a></br>RICAM, Austria</p>
                             <p style="text-align: center;"><a href="https://homepages.warwick.ac.uk/staff/D.Maclagan/">Diane Maclagan</a></br>University of Warwick</p>
                             <p style="text-align: center;"><a href="https://www.math.uni-tuebingen.de/user/hannah/">Hannah Markwig</a></br>Universität Tübingen</p>
                             <p style="text-align: center;"><a href="https://sites.google.com/view/ahmorales/">Alejandro Morales</a></br>University of Massachusetts, Amherst</p>
-                            <p style="text-align: center;"><a href="http://math.univ-lyon1.fr/~nadeau/">Philippe Nadeau</a></br>Université Lyon 1</p>
+                            <p style="text-align: center;"><a href="http://math.univ-lyon1.fr/~nadeau/">Philippe Nadeau</a></br>CNRS, Université Lyon 1</p>
                             <p style="text-align: center;"><a href="http://math.huji.ac.il/~nevo/">Eran Nevo</a></br>Hebrew University</p>
                             <p style="text-align: center;"><a href="https://www.math.nagoya-u.ac.jp/en/people/download/faculty/okada_soichi_en.pdf">Soichi Okada</a></br>Nagoya University</p>
-                            <p style="text-align: center;"><a href="https://www.lri.fr/~pons/en/">Viviane Pons</a></br>Université Paris-Sud</p>
+                            <p style="text-align: center;"><a href="https://www.lri.fr/~pons/en/">Viviane Pons</a></br>Université Paris-Saclay</p>
                             <p style="text-align: center;"><a href="https://www.imsc.res.in/~amri/">Amritanshu Prasad</a></br>The Institute of Mathematical Sciences, Chennai</p>
                             <p style="text-align: center;"><a href="https://www.mat.univie.ac.at/~schlosse/">Michael Schlosser</a></br>University of Vienna</p>
                             <p style="text-align: center;"><a href="http://arminstraub.com/">Armin Straub</a></br>Hebrew University</p>
