more on exam frame

--- a/exam-schedule-dec-2021.html
+++ b/exam-schedule-dec-2021.html
@@ -2,10 +2,10 @@
 title: Examination Schedule
 ---
 
-<h1 class="text-center">Timetable for February-June 2021 term </h1>
+<h1 class="text-center">Timetable for August-Dec 2021 term </h1>
 
-The following is the schedule for the final examination of the courses for January-April 2021 (February-June
-2021) term. The schedule is in the form of a lookup table that indicates a unique time-slot for final
+The following is the schedule for the final examination of the courses for August-December 2021 term. 
+The schedule is in the form of a lookup table that indicates a unique time-slot for final
 examination based on the course timings that are being followed by the individual instructors.
 
 <ul>
@@ -41,6 +41,6 @@ examination based on the course timings that are being followed by the individua
 <ol>
 <li><strong> Last date of class: Friday, May 28, 2021.</strong></li>
 <li> The specified examination date cannot be changed without the written concurrence of all registrants of the course. Scheduling the
-examination outside the period June 02 &ndash; June 11, 2021 needs the permission of the SCC, and can be allowed only after the last date of
+examination outside the period December 1 &ndash; December 10, 2021 needs the permission of the SCC, and can be allowed only after the last date of
 class.</li>
 </ol>
