Fixed broken link

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -511,7 +511,7 @@
       						<li>the main LaTeX file <a class="alt" href="assets/submissions/sample.tex" target="_blank">sample.tex</a>;</li>
       						<li>the graphics file <a class="alt" href="assets/submissions/plot.pdf" target="_blank">plot.pdf</a>;</li>
       						<li>the bibliography file <a class="alt" href="assets/submissions/sample.bib" target="_blank">sample.bib</a>;</li>
-      						<li>the intended output sample file <a class="alt" href="assets/submissions/intended output of sample.pdf" target="_blank">intended output of sample.pdf</a>.</li>
+      						<li>the intended output sample file <a class="alt" href="assets/submissions/intended%20output%20of%20sample.pdf" target="_blank">intended output of sample.pdf</a>.</li>
     							</ul>
   							</li>
 
