--- a/pros-pdf.html
+++ b/pros-pdf.html
@@ -36,22 +36,10 @@ The department hosts three types of postdoctoral fellows. These are:
     <li> <h5>Institute-funded postdoctoral fellows</h5>
         <p style="margin-top:0.4cm;">
 
-            The institute offers a select number of postdoctoral fellowships including the Raman Post-doc Fellowship. If
+            The institute offers a select number of postdoctoral fellowships including the Raman Post-doctoral Fellowship and the IoE Fellowship. If
             you wish to be hosted at the mathematics department as a Raman PDF, please carefully read the <a
                 href="https://iisc.ac.in/post-docs/"> institute advertisement</a> for these positions, and <b>follow the
-                procedure outlined in the advertisement</b>. Also note the following <b>additional step</b>:
-
-        <ul>
-            <li> Fill the <a
-                    href="https://script.google.com/macros/s/AKfycbysO_Y6uJE9PjpGvVlczYaGUWUZ8yyVkVA7_PSt81A_gQM8Oww9N5YpdxMPU1SfjQIg/exec">department
-                    application form</a>.</li>
-        </ul>
-        </p>
-
-        <p>
-            While you may apply any time of the year, the application review process at the departmental level may take
-            between 4-6 months. This includes the time required to obtain letters from your referees.
-        </p>
+                procedure outlined in the advertisement</b>. 
 
         <p style="margin-bottom:0.8cm;">
             Please note that the Raman PDF is a highly competitive and prestigious fellowship, and the department
