--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -700,7 +700,7 @@
     <!-- Footer-->
     <footer class="bg-light py-5">
         <div class="container">
-            <p class="small text-center text-muted">&copy; 2021-2022. Poster and website design credit: Madhusree Basu. </p>
+            <p class="small text-center text-muted">&copy; 2021-2022. Poster and website design credit: Techno Care. </p>
         </div>
     </footer>
     <!-- Bootstrap core JS-->
