Updated submission links

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -513,12 +513,12 @@
   				<li>Please download and unpack the file <a class="alt" href="assets/submissions/FPSAC-2022.zip" target="_blank">FPSAC-2022.zip</a>
 				or, if you prefer, download the files it contains individually and place them all in one folder:
     					<ul>
-      					<li>the LaTeX class file <a class="alt" href="assets/submissions/FPSAC2022.cls" target="_blank">FPSAC2022.cls</a>;</li>
+      					<li>the LaTeX class file <a class="alt" href="assets/submissions/FPSAC2022.cls" target="_blank">FPSAC2022.cls</a> <strong>(updated)</strong>;</li>
       					<li>the main LaTeX file <a class="alt" href="assets/submissions/sample.tex" target="_blank">sample.tex</a>;</li>
       					<li>the graphics file <a class="alt" href="assets/submissions/plot.pdf" target="_blank">plot.pdf</a>;</li>
       					<li>the bibliography file <a class="alt" href="assets/submissions/sample.bib" target="_blank">sample.bib</a>;</li>
       					<li>the intended output sample file <a class="alt" href="assets/submissions/intended_output_of_sample.pdf" 
-									       target="_blank">intended output of sample.pdf</a>.</li>
+									       target="_blank">intended_output_of_sample.pdf</a> <strong>(updated)</strong>.</li>
     					</ul>
   				</li>
 
