Struck out submission deadlines

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -273,7 +273,7 @@
                                     <dt class="text-white-50 mb-6"><li>Paper/poster submissions open</li></dt>
                                 </div>
                                 <div class="col-sm">
-                                    <dd class="text-white-50 mb-6">October 25, 2021</dd>
+                                    <dd class="text-white-50 mb-6"><del>October 25, 2021</del></dd>
                                 </div>
                             </div>
                     </div>
@@ -283,7 +283,7 @@
                                 <dt class="text-white-50 mb-6"><li>Deadline for paper/poster submissions</li></dt>
                             </div>
                             <div class="col-sm">
-                                <dd class="text-white-50 mb-6">November 25, 2021</dd>
+                                <dd class="text-white-50 mb-6"><del>November 25, 2021</del></dd>
                             </div>
                         </div>
                     </div>
