--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -207,7 +207,7 @@
                             <p style="text-align: center;"><a href="https://www.irif.fr/~chapuy/">Guillaume Chapuy</a></br>CNRS, Université de Paris</p>
                             <p style="text-align: center;"><a href="https://www.maths.dur.ac.uk/users/sunil.chhita/">Sunil Chhita</a> </br>Durham University</p>
                             <p style="text-align: center;"><a href="https://math.berkeley.edu/~corteel/">Sylvie Corteel</a></br>University of California Berkeley and CNRS, Université de Paris</p>
-                            <p style="text-align: center;"><a href="http://dleon.combinatoria.co/">Rafael S. González D'León</a> </br>Universidad Sergio Arboleda</p>
+                            <p style="text-align: center;"><a href="http://dleon.combinatoria.co/">Rafael S. González D'León</a> </br>Pontificia Universidad Javeriana</p>
                             <p style="text-align: center;"><a href="http://math.iisc.ac.in/~dattab/">Basudeb Datta</a></br>Indian Institute of Science, Bangalore</p>
                             <p style="text-align: center;"><a href="https://faculty.math.illinois.edu/~philippe/">Philippe di Francesco</a> </br>University of Illinois at Urbana-Champaign</p>
                             <p style="text-align: center;"><a href="http://math.univ-lyon1.fr/~dousse/">Jehanne Dousse</a></br>CNRS, Université Lyon 1</p>
