--- a/course-schedule.html
+++ b/course-schedule.html
@@ -1,5 +1,4 @@
 ---
 title: Course Schedule
 ---
-<iframe width="100%" height="575" frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTlzjpak3E5a-PSYusstECLc1BPG1i9sYWjiEKM88gLEZ8xnF-UvbTxonrKq9QMrOjyX8swjpKVdu_y/pubhtml?gid=0&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
-<p>For more details please see the <a href="https://indianinstituteofscience.sharepoint.com/sites/MA" target="_blank">IISc Mathematics intranet</a>.</p>
+<iframe width="100%" height="450" frameborder="0" scrolling="no" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vT8qIm3wcibBHQhuYXHYW9F8VcFq-zb-mrs6_rEtSPyw1E0TsNCzai0NIoW_3e5KpnxMOinLczy8T-1/pubhtml?gid=807552009&amp;single=true&amp;widget=true&amp;headers=false"></iframe>
