--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -253,7 +253,8 @@
                     <p style="text-align: center;"><a href="http://www.math.iitb.ac.in/~krishnan/">Sivaramakrishnan Sivasubramanian</a></br>Indian Institute of Technology, Bombay</p>
                     <p style="text-align: center;"><a href="https://math.depaul.edu/bridget/">Bridget Tenner</a><br><strong>Executive Committee Liaison</strong></br>DePaul University</p>
                     <p style="text-align: center;"><a href="https://www.imsc.res.in/~svis/">S. Viswanath</a></br>The Institute of Mathematical Sciences, Chennai</p>
-                    <p style="text-align: center;"><a href="https://personal.utdallas.edu/~nxw170830/">Nathan Williams</a><br><strong>Funding Coordinator</strong> </br>University of Texas at Dallas</p>
+                    <p style="text-align: center;"><a href="https://personal.utdallas.edu/~nxw170830/">Nathan Williams</a><br><strong>NSF Funding Coordinator</strong> </br>University of Texas at Dallas</p>
+		    <p style="text-align: center;"><a href="https://people.smp.uq.edu.au/TravisScrimshaw/">Travis Scrimshaw</a><br><strong>Proceedings Editor</strong> </br>University of Queensland</p>
                 </div>
                 </div>
             </div>
