Added pandemic warning

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -396,10 +396,15 @@
      <section class="page-section" id="localinfo">
         <div class="container">
            <div class="row justify-content-center">
-                <div class="col-lg-8 text-center">
+                <div class="col-lg-10 text-center">
                     <h2 style="text-align: center;">Local information</h2>
                     <hr class="divider my-4" />
-                    <p style="text-align: center;">Coming soon</p>
+                    <p style="text-align: left;"><b>We encourage everyone to come to Bangalore for FPSAC in July 2022, 
+			    and we sincerely hope that everyone will do so. However, given the pandemic, it seems  
+			    likely that some people may be unable or unwilling to travel this summer. Therefore we have 
+			    decided to make this a hybrid conference, streaming all presentations in addition to 
+			    (hopefully!) hosting them live on-site. As the conference date approaches, we will refine 
+			    or adjust these details as necessary.</b></p>
                     </div>
             </div>
         </div>
