Updated Sunil website

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -205,7 +205,7 @@
                             <p style="text-align: center;"><a href="https://www.ipht.fr/en/Pisp/jeremie.bouttier/index_en.php">Jérémie Bouttier</a></br>CEA, Université Paris-Saclay</p>
                             <p style="text-align: center;"><a href="https://www.mat.univie.ac.at/~cesar/">Cesar Ceballos</a> </br>TU Graz</p>
                             <p style="text-align: center;"><a href="https://www.irif.fr/~chapuy/">Guillaume Chapuy</a></br>CNRS, Université de Paris</p>
-                            <p style="text-align: center;"><a href="https://www.maths.dur.ac.uk/users/sunil.chhita/">Sunil Chhita</a> </br>Durham University</p>
+                            <p style="text-align: center;"><a href="https://www.durham.ac.uk/staff/sunil-chhita/">Sunil Chhita</a> </br>Durham University</p>
                             <p style="text-align: center;"><a href="https://math.berkeley.edu/~corteel/">Sylvie Corteel</a></br>University of California Berkeley and CNRS, Université de Paris</p>
                             <p style="text-align: center;"><a href="http://dleon.combinatoria.co/">Rafael S. González D'León</a> </br>Pontificia Universidad Javeriana</p>
                             <p style="text-align: center;"><a href="http://math.iisc.ac.in/~dattab/">Basudeb Datta</a></br>Indian Institute of Science, Bangalore</p>
