Updated "other conferences" design

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -460,11 +460,49 @@
     <div id="localinfoacco" class="container">
         <div class="row justify-content-center">
             <div class="col-lg-8 text-center">
-                <h4 style="text-align: center;">Related Workshops and Conferences</h4>
-                <hr class="divider my-4" />
-                <p style="text-align: center;">Coming soon</p>
+                <h4 style="text-align: center;">Related Workshops & Conferences</h4>
+                <hr class="divider my-4"/>
             </div>
         </div>
+    </div>
+
+    
+
+<!--    <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/">Combinatorial Methods in Graph Theory</a></h5>
+                    <p style="text-align: center;">Amrita University, Coimbatore, July 15-17</p>
+                </div>
+                <div class="col-sm">
+                    <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/">Combinatorial Methods in Graph Theory 1</a></h5>
+                    <p style="text-align: center;">Amrita University 1, Coimbatore, July 15-17</p>
+                </div>
+            </div>
+    </div>
+    <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/">Combinatorial Methods in Graph Theory 2</a></h5>
+                    <p style="text-align: center;">Amrita University 2, Coimbatore, July 15-17</p>
+                </div>
+
+                <div class="col-sm">
+                    <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/">Combinatorial Methods in Graph Theory 4</a></h5>
+                    <p style="text-align: center;">Amrita  University 4, Coimbatore, July 15-17</p>
+                </div>
+
+            </div>
+
+    </div>
+-->
+    <div class="container">
+            <div class="row">
+                <div class="col-sm">
+                    <h5 style="text-align: center;"><a href="https://amrita.edu/events/combinatorial-methods-in-graph-theory/">Combinatorial Methods in Graph Theory</a></h5>
+                        <p style="text-align: center;">Amrita University, Coimbatore, July 15-17</p>
+                </div>
+            </div>
     </div>
     </section>
 
