Added Guidelines for software demonstration

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -568,7 +568,54 @@
                 <hr class="divider light my-4" />
                 <!--<p class="text-white-50 mb-4">Submissions will be handled through the SoftConf website. More details will be available soon.</p>-->
                     
-                    <h3 class="text-white-50 mb-6">Guidelines for Initial Submissions</h3>
+			<h3 class="text-white-50 mb-6">Guidelines for software demonstration submissions</h3>
+
+				<p class="text-white-50 mb-6">Algebraic combinatorics has a long tradition of using software to support research; in particular, many 
+				of the published results and conjectures have been originally discovered through computer exploration or are 
+				backed up by calculations. This growing need is supported by regular software development efforts from the researchers.</p>
+
+				<p class="text-white-50 mb-6">The purpose of FPSAC's software demonstrations is to encourage code sharing and reuse by providing a venue for:</p>
+				<ul class="text-white-50 mb-6">
+    				<li>spreading the word on existing development efforts</li>
+    				<li>crediting the efforts put by researchers to not only develop software, but also share it and make it reusable</li>
+				</ul>
+
+				<p class="text-white-50 mb-6">This is complemented by satellite training and collaborative development events 
+				(see e.g. <a class="alt" href="https://wiki.sagemath.org/days60" target="_blank">Sage Days 60</a>).</p>
+
+				<p class="text-white-50 mb-6">We invite presentations of any piece of software that specifically supports research and teaching in 
+				algebraic combinatorics: computational libraries, online databases, certified proofs, training portals, etc. 
+				The presenter shall be actively involved in the development.</p>
+
+				<p class="text-white-50 mb-6">Presenters will be given 10 minutes to demonstrate their software to participants. The focus should be on explaining 
+				what the piece of software is about and prompting potential users to want to learn more.</p>
+
+				<p class="text-white-50 mb-6">The selection of the presentations will be based on the submission by email to 
+				<a class="alt" href="mailto:fpsac2022.math@iisc.ac.in?subject=Software demonstration">fpsac2022.math@iisc.ac.in</a> 
+				(with subject "Software demonstration") of an extended abstract (12 pages maximum, but we recommend no more than 6 pages) 
+				in the usual FPSAC format. Abstracts will be evaluated based on content, novelty, originality, importance 
+				and the potential value of the software to the community.</p>
+
+				<p class="text-white-50 mb-6">Extended abstracts of accepted software presentations will be published in the conference proceedings.</p>
+
+				<p class="text-white-50 mb-6">The abstract will typically include:</p>
+				<ul class="text-white-50 mb-6">
+    				<li>a description of the context and state of the art</li>
+    				<li>a description of the software itself: main functionalities, algorithms, ...</li>
+    				<li>a description of typical applications and use cases</li>
+    				<li>a comparison with existing software or algorithms</li>
+    				<li>brief evidence for the ease of use and reuse: documentation, examples of usage, availability, license, 
+    				software requirements, installation instructions, 
+    				(plans for) integration in existing platforms (e.g. GAP, Magma, Maple, Mathematica, or SageMath).</li>
+    				<li>brief evidence for software quality and sustainability: tests, development model, use of collaborative tools, etc.</li>
+				</ul>
+
+				<p class="text-white-50 mb-6">When applicable, it is okay to link instead to a permanent web page prominently containing the latter two pieces of information.</p>
+
+				<p class="text-white-50 mb-6">The software itself shall be made publicly available for scrutinizing by the reviewers. If a specific platform is required, 
+				reviewers will make some efforts to get access to that platform and try the software.</p>
+
+			<h3 class="text-white-50 mb-6">Guidelines for Initial Submissions</h3>
 
 				<p class="text-white-50 mb-6">Accepted extended abstracts will be published in a proceedings volume 
 				of&nbsp;<a class="alt" href="https://www.emis.de/journals/SLC/">Séminaire Lotharingien Combinatoire</a>. 
