Made caption small

--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -426,7 +426,7 @@
             <a href="assets/img/facultyhall.jpeg" target="_blank">
               <img src="assets/img/facultyhall.jpeg" alt="Faculty hall" height="200" style="padding-left:20px;">
               <div class="caption">
-                <p style="text-align: center;">Faculty hall</p>
+                <p style="font-size:small; text-align: center;">Faculty hall</p>
               </div>
             </a>
           </div>
@@ -437,7 +437,7 @@
             <a href="assets/img/mainbuilding.jpg" target="_blank">
               <img src="assets/img/mainbuilding.jpg" alt="Main building" height="170" style="padding-left:20px;">
               <div class="caption">
-                <p style="text-align: center;">Main Building</p>
+                <p style="font-size:small; text-align: center;">Main Building</p>
               </div>
             </a>
           </div>
@@ -448,7 +448,7 @@
             <a href="assets/img/foyer.jpg" target="_blank">
               <img src="assets/img/foyer.jpg" alt="Foyer" height="200" style="padding-left:20px;">
               <div class="caption">
-                <p style="text-align: center;">Foyer</p>
+                <p style="font-size:small; text-align: center;">Foyer</p>
               </div>
             </a>
           </div>
