--- a/fpsac2022/index.html
+++ b/fpsac2022/index.html
@@ -843,6 +843,11 @@
                             </div>
                         </a>
                     </div>
+                   <div class="col-lg-4 col-sm-6">
+                        <a class="inactiveLink" href="assets/img/NSFlogo.png">
+                        <img class="img-fluid" src="assets/img/NSFlogo.png" alt="NSF logo">
+                        </a>
+                    </div>		
                 </div>
             </div>
         </div>
